syntax = "proto3";

package product.v1;
option csharp_namespace = "ProductGrpc.Protos.v1";

import "google/protobuf/timestamp.proto";

service ProductService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc GetAllProducts (GetAllProductsRequest) returns (GetAllProductsResponse);

  rpc AddProduct (AddProductRequest) returns (AddProductResponse);
  rpc UpdateProducts (UpdateProductsRequest) returns (UpdateProductsResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);

  rpc InsertBulkProduct (InsertBulkProductRequest) returns (InsertBulkProductResponse);
}

message GetProductRequest {
  int32 product_id = 1;
}

message GetProductResponse {
  oneof product {
    bool product_null = 1;  // always set this to "true" when null
    ProductModel product_value = 2;
  }
}

message GetAllProductsRequest {}

message GetAllProductsResponse {
  ProductModel product = 1;
}

message AddProductRequest {
  ProductModel product = 1;
}

message AddProductResponse {
  ProductModel product = 1;
}

message UpdateProductsRequest {
  ProductModel product = 1;
}

message UpdateProductsResponse {
  ProductModel product = 1;
}

message DeleteProductRequest {
  int32 product_id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message InsertBulkProductRequest {
  ProductModel product = 1;
}

message InsertBulkProductResponse {
  bool success = 1;
  int32 insert_count = 2;
}

message ProductModel {
  int32 product_id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  ProductStatus status = 5;
  google.protobuf.Timestamp created_time = 6;
}

enum ProductStatus {
  PRODUCT_STATUS_UNSPECIFIED = 0;
  PRODUCT_STATUS_INSTOCK = 1;
  PRODUCT_STATUS_LOW = 2;
  PRODUCT_STATUS_NONE = 3;
}